plugins {
    id 'java'
    id 'application'
    id 'com.google.protobuf' version '0.9.4'
    id 'org.openjfx.javafxplugin' version '0.0.14'
}

group = 'com.saferoom'
version = '1.0'
sourceCompatibility = '17'
targetCompatibility = '17'

repositories {
    mavenCentral()
    flatDir {
        dirs 'libs'
    }
}

def javafxVersion = '21.0.1'

dependencies {
    // JavaFX (tamamı Maven üzerinden)
    implementation "org.openjfx:javafx-controls:$javafxVersion"
    implementation "org.openjfx:javafx-fxml:$javafxVersion"
    implementation "org.openjfx:javafx-base:$javafxVersion"
    implementation "org.openjfx:javafx-graphics:$javafxVersion"
    implementation "org.openjfx:javafx-media:$javafxVersion"
    implementation "org.openjfx:javafx-web:$javafxVersion"

    // JFoenix (JavaFX UI) - Modern Material Design
    implementation 'com.jfoenix:jfoenix:9.0.10'
    
    // Ikonli (Icons for JavaFX)
    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-fontawesome5-pack:12.3.1'

    // gRPC ve Protobuf
    implementation 'io.grpc:grpc-netty-shaded:1.58.0'
    implementation 'io.grpc:grpc-protobuf:1.58.0'
    implementation 'io.grpc:grpc-stub:1.58.0'
    compileOnly 'org.apache.tomcat:annotations-api:6.0.53'
    implementation 'com.google.protobuf:protobuf-java:3.23.4'

    // Network & P2P
    implementation files('libs/jstun-0.7.4.jar')
    implementation files('libs/weupnp-0.1.4.jar')

    // Email
    implementation files('libs/javax.mail.jar')
    implementation files('libs/javax.activation-1.2.0.jar')

    // Database
    implementation files('libs/mysql-connector-j-9.2.0.jar')

    // Logging
    implementation files('libs/slf4j-api-1.7.36.jar')
    implementation files('libs/slf4j-simple-1.7.36.jar')
    
    //MediaEngine
    implementation files('libs/gst1-java-core-1.4.0.jar')
    implementation 'net.java.dev.jna:jna:5.13.0'
    implementation 'net.java.dev.jna:jna-platform:5.13.0'
}

application {
    mainClass = 'com.saferoom.gui.MainApp'
}

protobuf {
    protoc {
        artifact = 'com.google.protobuf:protoc:3.23.4'
    }
    plugins {
        grpc {
            artifact = 'io.grpc:protoc-gen-grpc-java:1.58.0'
        }
    }
    generateProtoTasks {
        all().each { task ->
            task.plugins {
                grpc {}
            }
        }
    }
}

sourceSets {
    main {
        java {
            srcDirs = [
                'src/main/java',
                'build/generated/source/proto/main/java',
                'build/generated/source/proto/main/grpc'
            ]
        }
        proto {
            srcDirs = ['src/main/proto']
        }
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}

// CompileJava task'ının generateProto'ya bağımlı olduğunu belirt
compileJava.dependsOn 'generateProto'

javafx {
    version = javafxVersion
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base', 'javafx.media', 'javafx.web' ]
}

// Duplicate handling strategy
processResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

